        * inst/tinytest/toml_example-v0.4.0.toml: Moved from
	  tests/toml_example-v0.4.0.toml
        * inst/tinytest/toml_example.toml: Moved from tests/toml_example.toml
        * inst/tinytest/toml_hard_example.toml: Moved from
	  tests/toml_hard_example.toml

        * tests/*.Rout.save: Moved old test results to local/old_tests/
	
2019-06-21  Dirk Eddelbuettel  <edd@debian.org>

        * .travis.yml (install): Install tinytest

        * inst/tinytest/test_bool_datetime.R: Added, based on
	  tests/bool_datetime.R
	* inst/tinytest/bool_datetime.toml: Moved from
	  tests/bool_datetime.toml
	* inst/tinytest/test_float.R: Added, based on inst/tinytest/float.R
        * inst/tinytest/float.toml: Moved from tests/float.toml
        * inst/tinytest/test_integer.R: Added, based on tests/integer.R
        * inst/tinytest/integer.toml: Moved from tests/integer.toml

2019-06-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_arrays.R: Moved from tests/arrays.R
	* inst/tinytest/arrays.toml: Moved from tests/arrays.toml

2019-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Added Suggests: tinytest
	* tests/tinytest.R: Added

	* inst/tinytest/test_dates_times.R: Added, based on
	  tests/dates_and_times.R
	* inst/tinytest/dates_times.toml: Moved from
	  tests/dates_and times.toml

2018-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.5

	* man/parseTOML.Rd: Reformat example to fit line length

2018-10-26  Václav Hausenblas  <vencahaus@seznam.cz>

	* src/parse.cpp: Encoding of strings returned by the parser declared
	as UTF-8
	* R/parseToml.R: Non-file text inputs are converted to UTF-8 if
	necessary
	* man/parseTOML.Rd: Documentation

2018-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (getValue): Support local time

2018-10-24  Václav Hausenblas  <vencahaus@seznam.cz>

	* src/parse.cpp: New flag 'escape' to support escape chars
	* R/parseToml.R: Idem
	* man/parseTOML.Rd: Documentation
