@@ -14,6 +14,8 @@
 
         * tests/*.Rout.save: Moved old test results to local/old_tests/
 	
+	* .codecov.yml (coverage): Make patch behaviour more quiet
+
 2019-06-21  Dirk Eddelbuettel  <edd@debian.org>
 
         * .travis.yml (install): Install tinytest
